--- a/style.css
+++ b/style.css
@@ -51,27 +51,27 @@ notebook/pc:
 }
 
 .hlavni-recept {
-    background: url("Images/burger.jpg") no-repeat;
+    background: url("images/burger.jpg") no-repeat;
     background-position: 50% 50%;
-    background-size: 330px;
+    background-size: cover;
     min-height: 200px;
     position: relative;
 }
 
 .recept2 {
-    background: url("Images/sushi.jpg") no-repeat;
+    background: url("images/sushi.jpg") no-repeat;
 }
 
 .recept3 {
-    background: url("Images/rajcata.jpg") no-repeat;
+    background: url("images/rajcata.jpg") no-repeat;
 }
 
 .recept4 {
-    background: url("Images/kure.jpg") no-repeat;
+    background: url("images/kure.jpg") no-repeat;
 }
 
 .recept5 {
-    background: url("Images/grilovani.jpg") no-repeat;
+    background: url("images/grilovani.jpg") no-repeat;
 }
 
 .recept-kategorie {
@@ -95,28 +95,26 @@ notebook/pc:
     padding: 10px;
 }
 
-.recept-nazev.burger {
+.hlavni-recept, .recept-nazev {
     font-size: 28px;
 }
 
 .recept {
     min-height: 90px;
-    background-size: 300px;
+    background-size: cover;
     background-position: 50% 50%;
     position: relative;
     text-shadow: 1px 1px 20px black;
     border: 0.3px solid white;
 }
 
-@media (min-width:300px) {
+@media (min-width:480px) {
     .hlavni-recept {
         min-height: 250px;
-        background-size: 700px;
     }
     .recept {
         min-height: 150px;
         width: 100%;
-        background-size: 450px;
     }
     .recept-kategorie, .recept-komentare, .recept-nazev {
         padding: 20px;
@@ -133,18 +131,16 @@ notebook/pc:
     }
 }
 
-@media (min-width:700px) {
+@media (min-width:860px) {
     .hlavni-recept {
         min-height: 400px;
-        background-size: 800px;
         width: 80%;
     }
     .recept {
         min-height: 200px;
         width: 100%;
-        background-size: 550px;
     }
-    .jedlo {
+    .sloupec {
         display: flex;
         flex-direction: column;
         width: 100%;
